--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -185,7 +185,7 @@
                 },
                 {
                     id: "18713234",
-                    question: "All of the following are organizational data except ____.",
+                    question: "All of the following are organizational data except ______.",
                     options: ["Storage Location", "Company Code", "Plant", "Person"],
                     correctAnswer: "Person"
                 },
@@ -1365,7 +1365,7 @@
                 },
                 {
                     id: "FA2-30",
-                    question: "All of the following are capacities used in Work Center except Product Quantity.",
+                    question: "All of the following are capacities used in Work Center except ______.",
                     options: ["Product Quantity", "Labor", "Machine", "Other"],
                     correctAnswer: "Product Quantity"
                 },
@@ -1389,7 +1389,7 @@
                 },
                 {
                     id: "FA2-38",
-                    question: "All of the following are forecasting models except Linear.",
+                    question: "All of the following are forecasting models except ______.",
                     options: ["Linear", "Constant", "Trend", "Seasonal"],
                     correctAnswer: "Linear"
                 },
@@ -1401,13 +1401,13 @@
                 },
                 {
                     id: "FA2-55",
-                    question: "Work center used to define the following capacities except Reports.",
+                    question: "Work center used to define the following capacities except ______.",
                     options: ["Reports", "Labor", "Machine", "Other"],
                     correctAnswer: "Reports"
                 },
                 {
                     id: "FA2-56",
-                    question: "All of the following are routing for finished bike except Inventory Key.",
+                    question: "All of the following are routing for finished bike except ______.",
                     options: ["Inventory Key", "Assembly", "Painting", "Welding"],
                     correctAnswer: "Inventory Key"
                 },
@@ -1425,13 +1425,13 @@
                 },
                 {
                     id: "FA2-60",
-                    question: "Work centers can represent the following except Detailed Scheduling.",
+                    question: "Work centers can represent the following except ______.",
                     options: ["Detailed Scheduling", "Machines", "People", "Production Lines"],
                     correctAnswer: "Detailed Scheduling"
                 },
                 {
                     id: "FA2-61",
-                    question: "Work Centers capture and use the following resource related data except Master Data.",
+                    question: "Work Centers capture and use the following resource related data except ______.",
                     options: ["Master Data", "Costing Data", "Scheduling Information", "Basic Data"],
                     correctAnswer: "Master Data"
                 },
@@ -1683,7 +1683,7 @@
                 },
                 {
                     id: "FA2-87",
-                    question: "Routing Frame consists of the following fields except Name of the worker.",
+                    question: "Routing Frame consists of the following fields except ______.",
                     options: ["Name of the worker", "Operation", "Work Center", "Control Key"],
                     correctAnswer: "Name of the worker"
                 },
@@ -2286,7 +2286,7 @@
                 },
                 {
                     id: "FA3-29",
-                    question: "All of the following are examples of statistical key figures except Number of Pages.",
+                    question: "All of the following are examples of statistical key figures except ______.",
                     options: ["Number of Pages", "Number of Employees", "Square Footage", "Number of Computers"],
                     correctAnswer: "Number of Pages"
                 },
@@ -2358,7 +2358,7 @@
                 },
                 {
                     id: "FA3-45",
-                    question: "All of the following are external target audience of financial accounting except Employees.",
+                    question: "All of the following are external target audience of financial accounting except ______.",
                     options: ["Employees", "Customers", "Vendors", "Banks"],
                     correctAnswer: "Employees"
                 },
@@ -2388,7 +2388,7 @@
                 },
                 {
                     id: "FA3-53",
-                    question: "SAP FI module is fully integrated with other SAP modules except Quality Management.",
+                    question: "SAP FI module is fully integrated with other SAP modules except ______.",
                     options: ["Quality Management", "Sales and Distribution", "Materials Management", "Production Planning"],
                     correctAnswer: "Quality Management"
                 },
@@ -3039,7 +3039,7 @@
                 },
                 {
                     id: "FA4-28",
-                    question: "All of the following are hazardous materials except Waste Materials.",
+                    question: "All of the following are hazardous materials except ______.",
                     options: ["Waste Materials", "Flammable Materials", "Corrosive Materials", "Explosive Materials"],
                     correctAnswer: "Waste Materials"
                 },
@@ -4158,7 +4158,7 @@
                 },
                 {
                     id: "FA5-19",
-                    question: "All of the following are possible entries with Easy Cost Planning except External process accounting.",
+                    question: "All of the following are possible entries with Easy Cost Planning except ______.",
                     options: ["External process accounting", "Internal process accounting", "Direct process accounting", "Reservations"],
                     correctAnswer: "External process accounting"
                 },
@@ -4266,7 +4266,7 @@
                 },
                 {
                     id: "FA5-51",
-                    question: "All of the following are Information Systems types of reports except Item Purchase.",
+                    question: "All of the following are Information Systems types of reports except ______.",
                     options: ["Item Purchase", "Cost Report", "Schedule Report", "Performance Report"],
                     correctAnswer: "Item Purchase"
                 },
@@ -4326,7 +4326,7 @@
                 },
                 {
                     id: "FA5-69",
-                    question: "All of the following are contents of notification except Type of equipment.",
+                    question: "All of the following are contents of notification except ______.",
                     options: ["Type of equipment", "Location data", "Reported by", "Technical object"],
                     correctAnswer: "Type of equipment"
                 },
@@ -4344,7 +4344,7 @@
                 },
                 {
                     id: "FA5-73",
-                    question: "Order planning includes the following except Functional Location.",
+                    question: "Order planning includes the following except ______.",
                     options: ["Functional Location", "Required spare parts", "Steps to be performed", "Specialized tooling"],
                     correctAnswer: "Functional Location"
                 },
@@ -4430,7 +4430,7 @@
                 },
                 {
                     id: "FA6-3",
-                    question: "Vendor master data on client level composed of the following fields except Name.",
+                    question: "Vendor master data on client level composed of the following fields except ______.",
                     options: ["Name", "Address", "Bank Details", "Tax Information"],
                     correctAnswer: "Name"
                 },
@@ -4532,7 +4532,7 @@
                 },
                 {
                     id: "FA6-20",
-                    question: "All of the following are functionality of Quality Management except Quality Information Record.",
+                    question: "All of the following are functionality of Quality Management except ______.",
                     options: ["Quality Information Record", "Inspection Planning", "Inspection Processing", "Quality Certificates"],
                     correctAnswer: "Quality Information Record"
                 },
@@ -4634,7 +4634,7 @@
                 },
                 {
                     id: "FA6-38",
-                    question: "All of the following are the contents of the Service Order except for Warranties.",
+                    question: "All of the following are the contents of the Service Order except for ______.",
                     options: ["Warranties", "Service Items", "Planned Activities", "Resources"],
                     correctAnswer: "Warranties"
                 },
@@ -4658,19 +4658,19 @@
                 },
                 {
                     id: "FA6-43",
-                    question: "All of the following are general information relevant for the entire organization except Stock City.",
+                    question: "All of the following are general information relevant for the entire organization except ______.",
                     options: ["Stock City", "Company Name", "Address", "Communication"],
                     correctAnswer: "Stock City"
                 },
                 {
                     id: "FA6-44",
-                    question: "All of the following modules can create customer master data except Work Center.",
+                    question: "All of the following modules can create customer master data except ______.",
                     options: ["Work Center", "Sales and Distribution", "Financial Accounting", "Materials Management"],
                     correctAnswer: "Work Center"
                 },
                 {
                     id: "FA6-45",
-                    question: "Vendor master data on purchase organization data are composed of the following fields except Reconciliation Account.",
+                    question: "Vendor master data on purchase organization data are composed of the following fields except ______.",
                     options: ["Reconciliation Account", "Payment Terms", "Incoterms", "Currency"],
                     correctAnswer: "Reconciliation Account"
                 },
@@ -4742,7 +4742,7 @@
                 },
                 {
                     id: "FA6-57",
-                    question: "All of the following are applications of capacities except for Emissions.",
+                    question: "All of the following are applications of capacities except for ______.",
                     options: ["Emissions", "Labor", "Machine", "Other"],
                     correctAnswer: "Emissions"
                 },
@@ -4850,7 +4850,7 @@
                 },
                 {
                     id: "FA6-75",
-                    question: "Material master data can be use by the following components of the Sap system except Human Capital Management.",
+                    question: "Material master data can be use by the following components of the Sap system except ______.",
                     options: ["Human Capital Management", "Sales and Distribution", "Materials Management", "Production Planning"],
                     correctAnswer: "Human Capital Management"
                 },
@@ -4922,9 +4922,9 @@
                 },
                 {
                     id: "FA6-87",
-                    question: "Service Notification – It is used to notify the maintenance department about an abnormal or exceptional situation (s) in technical objects at the plant. It is also used for planned maintenance activities and to notify planners.",
-                    options: ["True", "False", "It is used to notify the maintenance department about an abnormal or exceptional situation (s) in technical objects at the plant. It is also used for planned maintenance activities and to notify planners."],
-                    correctAnswer: "It is used to notify the maintenance department about an abnormal or exceptional situation (s) in technical objects at the plant. It is also used for planned maintenance activities and to notify planners." // This is a definition.
+                    question: "It is used to notify the maintenance department about an abnormal or exceptional situation (s) in technical objects at the plant. It is also used for planned maintenance activities and to notify planners.",
+                    options: ["Service Notification"],
+                    correctAnswer: "Service Notification" // This is a definition.
                 },
                 {
                     id: "FA6-88",
@@ -4970,7 +4970,7 @@
                 },
                 {
                     id: "FA6-95",
-                    question: "All of the following are service notification types except for Customer Information.",
+                    question: "All of the following are service notification types except for ______.",
                     options: ["Customer Information", "Malfunction Report", "Activity Report", "Request for Service"],
                     correctAnswer: "Customer Information"
                 },
@@ -4982,7 +4982,7 @@
                 },
                 {
                     id: "FA6-97",
-                    question: "The general information is relevant for the entire organization to the following except for Stock Quantity.",
+                    question: "The general information is relevant for the entire organization to the following except for ______.",
                     options: ["Stock Quantity", "Company Name", "Address", "Communication"],
                     correctAnswer: "Stock Quantity"
                 },
