--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -3415,7 +3415,7 @@
                     id: "19325681",
                     question: "From the beginning of one series to the end of another series.",
                     options: ["Start Series", "Normal Series", "End Series", "Bounding Series"],
-                    correctAnswer: "End Series"
+                    correctAnswer: "Bounding Series"
                 },
                 {
                     id: "19325682",
