--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -3445,7 +3445,7 @@
                     id: "19325686",
                     question: "Equipment Bill of Materials contains about the equipment information on functional locations?",
                     options: ["True", "False"],
-                    correctAnswer: "False" // Equipment BOMs contain material info for the equipment itself.
+                    correctAnswer: "True" // Equipment BOMs contain material info for the equipment itself.
                 },
                 {
                     id: "19325687",
