--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -4478,21 +4478,21 @@
                 },
                 {
                     id: "FA6-11",
-                    question: "Usage Decision – Confirms that all physical samples have been valuated and the inspection has been completed.",
-                    options: ["True", "False", "Confirms that all physical samples have been valuated and the inspection has been completed."],
-                    correctAnswer: "Confirms that all physical samples have been valuated and the inspection has been completed." // This is a definition.
+                    question: "Confirms that all physical samples have been valuated and the inspection has been completed.",
+                    options: ["Usage Decision", "Inspection Lot", "Quality Inspection", "Inspection Result"],
+                    correctAnswer: "Usage Decision." // This is a definition.
                 },
                 {
                     id: "FA6-12",
-                    question: "S/4 HANA QM in Procurement – Quality inspection process with material-supplier release.",
-                    options: ["True", "False", "Quality inspection process with material-supplier release."],
-                    correctAnswer: "Quality inspection process with material-supplier release." // This is a definition.
+                    question: "Quality inspection process with material-supplier release.",
+                    options: ["S/4 HANA QM in Procurement"],
+                    correctAnswer: "S/4 HANA QM in Procurement" // This is a definition.
                 },
                 {
                     id: "FA6-13",
-                    question: "S/4 HANA QM in Procurement – Regular quality inspection process at goods receipt.",
-                    options: ["True", "False", "Regular quality inspection process at goods receipt."],
-                    correctAnswer: "Regular quality inspection process at goods receipt." // This is a definition.
+                    question: "Regular quality inspection process at goods receipt.",
+                    options: ["S/4 HANA QM in Procurement"],
+                    correctAnswer: "S/4 HANA QM in Procurement." // This is a definition.
                 },
                 {
                     id: "FA6-14",
@@ -4520,9 +4520,9 @@
                 },
                 {
                     id: "FA6-18",
-                    question: "Inspection Lot – Documented by an inspection lot record.",
-                    options: ["True", "False", "Documented by an inspection lot record."],
-                    correctAnswer: "Documented by an inspection lot record." // This is a definition.
+                    question: "Documented by an inspection lot record.",
+                    options: ["Inspection Lot"],
+                    correctAnswer: "Inspection Lot." // This is a definition.
                 },
                 {
                     id: "FA6-19",
@@ -4538,15 +4538,15 @@
                 },
                 {
                     id: "FA6-21",
-                    question: "Service Contract – It is a service agreement with customers for the specified scope of services and in a defined time frame, it also contains the scope of services, SLA’s prices like annual maintenance contract details, cancellation conditions etc.",
-                    options: ["True", "False", "It is a service agreement with customers for the specified scope of services and in a defined time frame, it also contains the scope of services, SLA’s prices like annual maintenance contract details, cancellation conditions etc."],
-                    correctAnswer: "It is a service agreement with customers for the specified scope of services and in a defined time frame, it also contains the scope of services, SLA’s prices like annual maintenance contract details, cancellation conditions etc." // This is a definition.
+                    question: "It is a service agreement with customers for the specified scope of services and in a defined time frame, it also contains the scope of services, SLA’s prices like annual maintenance contract details, cancellation conditions etc.",
+                    options: ["Service Contract"],
+                    correctAnswer: "Service Contract."
                 },
                 {
                     id: "FA6-23",
-                    question: "Customer Master Data – It contains all of the information necessary for processing orders, deliveries, invoices and customer payment.",
-                    options: ["True", "False", "It contains all of the information necessary for processing orders, deliveries, invoices and customer payment."],
-                    correctAnswer: "It contains all of the information necessary for processing orders, deliveries, invoices and customer payment." // This is a definition.
+                    question: "It contains all of the information necessary for processing orders, deliveries, invoices and customer payment.",
+                    options: ["Service Contract"],
+                    correctAnswer: "Service Contract." // This is a definition.
                 },
                 {
                     id: "FA6-24",
@@ -4556,9 +4556,9 @@
                 },
                 {
                     id: "FA6-25",
-                    question: "Distribution Channel – The way in which products or services reach the customer.",
-                    options: ["True", "False", "The way in which products or services reach the customer."],
-                    correctAnswer: "The way in which products or services reach the customer." // This is a definition.
+                    question: "The way in which products or services reach the customer.",
+                    options: ["Distribution Channel"],
+                    correctAnswer: "Distribution Channel" // This is a definition.
                 },
                 {
                     id: "FA6-26",
@@ -4568,9 +4568,9 @@
                 },
                 {
                     id: "FA6-27",
-                    question: "Controlling Area – It is a way to identify and track where revenues and costs are incurred for evaluation purposes.",
-                    options: ["True", "False", "It is a way to identify and track where revenues and costs are incurred for evaluation purposes."],
-                    correctAnswer: "It is a way to identify and track where revenues and costs are incurred for evaluation purposes." // This is a definition.
+                    question: "It is a way to identify and track where revenues and costs are incurred for evaluation purposes.",
+                    options: ["Controlling Area"],
+                    correctAnswer: "Controlling Area" // This is a definition.
                 },
                 {
                     id: "FA6-28",
@@ -4580,15 +4580,15 @@
                 },
                 {
                     id: "FA6-29",
-                    question: "Work Center – A location within a plant where value-added work (operations or activities) are performed.",
-                    options: ["True", "False", "A location within a plant where value-added work (operations or activities) are performed."],
-                    correctAnswer: "A location within a plant where value-added work (operations or activities) are performed." // This is a definition.
+                    question: "A location within a plant where value-added work (operations or activities) are performed.",
+                    options: ["Work Center"],
+                    correctAnswer: "Work Center" // This is a definition.
                 },
                 {
                     id: "FA6-30",
-                    question: "Storage Location – An organizational unit allowing differentiation between the various stocks of material in a plant.",
-                    options: ["True", "False", "An organizational unit allowing differentiation between the various stocks of material in a plant."],
-                    correctAnswer: "An organizational unit allowing differentiation between the various stocks of material in a plant." // This is a definition.
+                    question: "An organizational unit allowing differentiation between the various stocks of material in a plant.",
+                    options: ["Storage Location"],
+                    correctAnswer: "Storage Location" // This is a definition.
                 },
                 {
                     id: "FA6-31",
@@ -4688,21 +4688,21 @@
                 },
                 {
                     id: "FA6-48",
-                    question: "S/4 HANA QM in Sales – Goods issue only with accepted quality.",
-                    options: ["True", "False", "Goods issue only with accepted quality."],
-                    correctAnswer: "Goods issue only with accepted quality." // This is a definition.
+                    question: "Goods issue only with accepted quality.",
+                    options: ["S/4 HANA QM in Sales"],
+                    correctAnswer: "S/4 HANA QM in Sales" // This is a definition.
                 },
                 {
                     id: "FA6-49",
-                    question: "Inspection Plan – Several materials can be assigned to an inspection plan.",
-                    options: ["True", "False", "Several materials can be assigned to an inspection plan."],
-                    correctAnswer: "Several materials can be assigned to an inspection plan." // This is a definition.
+                    question: "Several materials can be assigned to an inspection plan.",
+                    options: ["Inspection Plan"],
+                    correctAnswer: "Inspection Plan." // This is a definition.
                 },
                 {
                     id: "FA6-50",
-                    question: "Inspection Plan – Several inspection plans with different inspection operations or inspection characteristics can be created for a material or combination of material, vendor and manufacturer, or material and custom.",
-                    options: ["True", "False", "Several inspection plans with different inspection operations or inspection characteristics can be created for a material or combination of material, vendor and manufacturer, or material and custom."],
-                    correctAnswer: "Several inspection plans with different inspection operations or inspection characteristics can be created for a material or combination of material, vendor and manufacturer, or material and custom." // This is a definition.
+                    question: "Several inspection plans with different inspection operations or inspection characteristics can be created for a material or combination of material, vendor and manufacturer, or material and custom.",
+                    options: ["Inspection Plan"],
+                    correctAnswer: "Inspection Plan" // This is a definition.
                 },
                 {
                     id: "FA6-51",
@@ -4712,9 +4712,9 @@
                 },
                 {
                     id: "FA6-52",
-                    question: "Quality Information Record – If a quality assurance agreement or vendor release is required for a material, a Quality Info. Record must be created.",
-                    options: ["True", "False", "If a quality assurance agreement or vendor release is required for a material, a Quality Info. Record must be created."],
-                    correctAnswer: "If a quality assurance agreement or vendor release is required for a material, a Quality Info. Record must be created." // This is a definition.
+                    question: "If a quality assurance agreement or vendor release is required for a material, a Quality Info. Record must be created.",
+                    options: ["Quality Information Record"],
+                    correctAnswer: "Quality Information Record" // This is a definition.
                 },
                 {
                     id: "FA6-53",
@@ -4736,9 +4736,9 @@
                 },
                 {
                     id: "FA6-56",
-                    question: "Shipping Point – It performs shipping processing and is the part of the company responsible for the type of shipping, the necessary shipping materials, and the means of transport.",
-                    options: ["True", "False", "It performs shipping processing and is the part of the company responsible for the type of shipping, the necessary shipping materials, and the means of transport."],
-                    correctAnswer: "It performs shipping processing and is the part of the company responsible for the type of shipping, the necessary shipping materials, and the means of transport." // This is a definition.
+                    question: "It performs shipping processing and is the part of the company responsible for the type of shipping, the necessary shipping materials, and the means of transport.",
+                    options: ["Shipping Point"],
+                    correctAnswer: "Shipping Point" // This is a definition.
                 },
                 {
                     id: "FA6-57",
@@ -4754,9 +4754,9 @@
                 },
                 {
                     id: "FA6-59",
-                    question: "Controlling Area – a self-contained, organizational unit for which the management of revenues and expenses can be performed.",
-                    options: ["True", "False", "a self-contained, organizational unit for which the management of revenues and expenses can be performed."],
-                    correctAnswer: "a self-contained, organizational unit for which the management of revenues and expenses can be performed." // This is a definition.
+                    question: "a self-contained, organizational unit for which the management of revenues and expenses can be performed.",
+                    options: ["Controlling Area"],
+                    correctAnswer: "Controlling Area" // This is a definition.
                 },
                 {
                     id: "FA6-60",
@@ -4766,15 +4766,15 @@
                 },
                 {
                     id: "FA6-61",
-                    question: "Operating Concern – It represents a part of an organization for which the sales market is structured in a uniform manner.",
-                    options: ["True", "False", "It represents a part of an organization for which the sales market is structured in a uniform manner."],
-                    correctAnswer: "It represents a part of an organization for which the sales market is structured in a uniform manner." // This is a definition.
+                    question: "It represents a part of an organization for which the sales market is structured in a uniform manner.",
+                    options: ["Operating Concern"],
+                    correctAnswer: "Operating Concern" // This is a definition.
                 },
                 {
                     id: "FA6-62",
-                    question: "Plant – A place in which the technical objects of a company are installed and Operating are or branch within a company.",
-                    options: ["True", "False", "A place in which the technical objects of a company are installed and Operating are or branch within a company."],
-                    correctAnswer: "A place in which the technical objects of a company are installed and Operating are or branch within a company." // This is a definition.
+                    question: "A place in which the technical objects of a company are installed and Operating are or branch within a company.",
+                    options: ["Plant"],
+                    correctAnswer: "Plant" // This is a definition.
                 },
                 {
                     id: "FA6-63",
